# superion

./: .gcloudignore  AGENTS.md  PRD-backend.md  PRD-frontend.md  PRD.md  README.md  correcciones.md  integration_contracts.md  product.md
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PRD.md  README.md  RUNBOOK.md  pyproject.toml
backend/src/: __init__.py
backend/src/application/: __init__.py
backend/src/domain/: __init__.py  exceptions.py
backend/src/infrastructure/: __init__.py  config.py  errors.py  factories.py
backend/src/interface/: __init__.py  main.py
backend/supabase/migrations/: 0001_init.sql
backend/tests/: conftest.py
backend/tests/contract/: test_openapi_compliance.py  test_websocket_contract.py
backend/tests/e2e/: test_auth_e2e.py  test_elevenlabs_provision_e2e.py  test_foundation_e2e.py  test_full_flow_e2e.py  test_photos_e2e.py  test_rag_e2e.py  test_report_e2e.py  test_voice_flow_e2e.py  test_websocket_e2e.py  test_work_orders_sessions_e2e.py
backend/tests/integration/: test_admin_elevenlabs_status.py  test_app_factory.py  test_audit_hooks.py  test_auth_router.py  test_correlation_middleware.py  test_elevenlabs_cli.py  test_elevenlabs_webhook.py  test_event_bus.py  test_get_current_user_dep.py  test_in_memory_provisioner.py  test_indexing_flow.py  test_langgraph_mock_state.py  test_live_updates.py  test_manifest_on_disk.py  test_manuals_router.py  test_metrics_endpoint.py  test_openapi_served.py  test_photos_router.py  test_rag_endpoint.py  test_rate_limit_middleware.py  test_ready.py  test_reports_router.py  (+13 more)
(+499 files in other folders)
